2019-10-31  Jakub Jelinek  <jakub@redhat.com>

	PR c++/90947
	* cp-tree.h (type_initializer_zero_p): Declare.
	* decl.c (reshape_init_array_1): Formatting fix.
	* tree.c (type_initializer_zero_p): New function.  Moved from
	../tree.c, use next_initializable_field, formatting fix.  Return
	false for TYPE_NON_AGGREGATE_CLASS types.

2019-10-30  Jason Merrill  <jason@redhat.com>

	PR c++/92268 - hard error satisfying return-type-requirement
	* constraint.cc (type_deducible_p): Check for substitution failure.
	(diagnose_compound_requirement): Adjust diagnostic.
	* pt.c (do_auto_deduction): Don't pass cargs to
	constraints_satisfied_p.

2019-10-30  Jakub Jelinek  <jakub@redhat.com>

	PR c++/91369 - Implement P0784R7: constexpr new
	* constexpr.c (cxx_replaceable_global_alloc_fn): Don't return true
	for placement new.
	(cxx_placement_new_fn, is_std_construct_at): New functions.
	(cxx_eval_call_expression): Allow placement new in std::construct_at.
	(potential_constant_expression_1): Likewise.

	* typeck.c (decl_in_std_namespace_p): Return true also for decls
	in inline namespaces inside of std namespace.

2019-10-30  Bernd Edlinger  <bernd.edlinger@hotmail.de>

	PR c++/92024
	* name-lookup.c (check_local_shadow): Shadowing TYPE_DECLs
	is always a -Wshadow=compatible-local warning, unless
	-Wshadow is used.

2019-10-30  Jason Merrill  <jason@redhat.com>

	* cxx-pretty-print.c (get_fold_operator): Use OVL_OP_INFO.

2019-10-30  Marek Polacek  <polacek@redhat.com>

	PR c++/92134 - constinit malfunction in static data member.
	* decl2.c (grokfield): Set LOOKUP_CONSTINIT.

2019-10-30  Jakub Jelinek  <jakub@redhat.com>

	* cp-tree.h (omp_declare_variant_finalize, build_local_temp): Declare.
	* decl.c: Include omp-general.h.
	(declare_simd_adjust_this): Add forward declaration.
	(omp_declare_variant_finalize_one, omp_declare_variant_finalize): New
	function.
	(cp_finish_decl, finish_function): Call omp_declare_variant_finalize.